Refactor classes, add logger, add saving and getting jokes from DB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+spring.kafka.consumer.group-id=app
+spring.kafka.bootstrap-servers=http://localhost:9900
+spring.datasource.url=jdbc:postgresql://localhost:5432/jokebase
+spring.datasource.username=postgres
+spring.datasource.password=1234
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
